--- a/style.css
+++ b/style.css
@@ -66,6 +66,8 @@ header a:hover, footer a:hover{
 main{
     max-width: 800px;
     margin: auto;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.459);;
+
 }
 
 section{
